# picky_bpe

./: .gitignore  README.md  test.sh
bindings/python/: Cargo.toml  Makefile  pyproject.toml  stub.py
bindings/python/examples/: custom_components.py  debug_example.py  example.py  train_bert_wordpiece.py  train_bytelevel_bpe.py  train_pbpe.py  train_with_datasets.py
bindings/python/py_src/pbpe_tokenizer/: __init__.py
bindings/python/py_src/pbpe_tokenizer/implementations/: base_tokenizer.py  bert_wordpiece.py  byte_level_bpe.py  sentencepiece_bpe.py  sentencepiece_unigram.py
bindings/python/py_src/pbpe_tokenizer/models/: __init__.py  __init__.pyi
bindings/python/py_src/pbpe_tokenizer/trainers/: __init__.py  __init__.pyi
bindings/python/scripts/: convert.py  spm_parity_check.py
bindings/python/src/: decoders.rs  encoding.rs  error.rs  lib.rs  models.rs  normalizers.rs  pre_tokenizers.rs  processors.rs  tokenizer.rs  trainers.rs
bindings/python/src/utils/: pretokenization.rs
logs/: HF_logs.txt  picky_logs.txt  python_logs.txt
pbpe_tokenizer/: Cargo.toml
pbpe_tokenizer/data/: roberta.json  unigram.json
pbpe_tokenizer/src/models/bpe/: trainer.rs
pbpe_tokenizer/src/models/pbpe/: model.rs  serialization.rs  trainer.rs
playground/: Cargo.toml
playground/src/: main.rs
playground_picky/: Cargo.toml  filter-utf8.py  log.txt  tokenizer.json  wget-log
playground_picky/src/: main.rs
python_filter/: concat_data.py  filter-utf8.py  toy_tokenizer.py
tokenizers/: Cargo.toml  README.md
tokenizers/src/models/: mod.rs
tokenizers/src/models/bpe/: trainer.rs  word.rs
tokenizers/src/models/pbpe/: model.rs  trainer.rs  word.rs
tokenizers/src/tokenizer/: mod.rs
