[package]
name = "pbpe_tokenizer"
version = "0.20.1-dev.0"
authors = ["Vlad Polyakov <vladpolyakov@example.com>"]
edition = "2018"

[lib]
name = "pbpe_tokenizer"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
libc = "0.2"
env_logger = "0.11"
pyo3 = { version = "0.22", features = ["py-clone"] }
numpy = "0.22"
ndarray = "0.15"
itertools = "0.12"

[dependencies.pbpe_tokenizer]
path = "../../pbpe_tokenizer"

[dev-dependencies]
tempfile = "3.10"
pyo3 = { version = "0.22", features = ["auto-initialize", "py-clone"] }

[features]
defaut = ["pyo3/extension-module"]
